--- a/HTML_Modul_1/DZ1.html
+++ b/HTML_Modul_1/DZ1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="wraper">
-		<h2>Дол/ежелова Виктория Владимировна</h2>
+		<h2>Долежелова Виктория Владимировна</h2>
 		<img src="Hydrangeas.jpg">
 		<p>Студентка программа подготовки
 			Frontend-специалистов</p>
