добавлено описание фотографии

--- a/HTML_Modul_1/DZ1.html
+++ b/HTML_Modul_1/DZ1.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="wraper">
 		<h2>Долежелова Виктория Владимировна</h2>
-		<img src="Hydrangeas.jpg">
+		<img src="Hydrangeas.jpg" alt="Это гортензия">
 		<p>Студентка программа подготовки
 			Frontend-специалистов</p>
 			<hr>
