--- a/HTML_Modul_1/DZ1.html
+++ b/HTML_Modul_1/DZ1.html
@@ -7,27 +7,30 @@
 </head>
 <body>
 	<div class="wraper">
-		<h2>Долежелова Виктория Владимировна</h2>
-		<img src="Hydrangeas.jpg" alt="Это гортензия">
-		<p>Студентка программа подготовки
-			Frontend-специалистов</p>
-			<hr>
-			<p>	Хочу учить Frontend, потому что:</p>
-			<ul>
-				<li>хочу получить новую профессию</li>
-				<li>хочу  в дальнейшем использовать полученные знания в своей работе</li>
-				<li>быть всегда в курсе новинок и разработок в сфере Frontend </li>
-			</ul>
-			<hr>
-			<p>	Мой контактный телефон</p>
-			<p>	+380501234567</p>
-			<p>	Мой профиль в Facebook</p>
-			<a href="https://www.facebook.com/profile.php?id=100012543996558">Vita Alpha</a>
-			<hr>
-			<p>Мой фидбек</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
-				</p>
+		<div class="name">
+			<h2>Долежелова Виктория Владимировна</h2>
+			<img src="Hydrangeas.jpg">
+			<p>Студентка программа подготовки
+				Frontend-специалистов</p>
+		</div>
+		<div class="content">
+				<p>	Хочу учить Frontend, потому что:</p>
+				<ul>
+					<li>хочу получить новую профессию</li>
+					<li>хочу  в дальнейшем использовать полученные знания в своей работе</li>
+					<li>быть всегда в курсе новинок и разработок в сфере Frontend </li>
+				</ul>
+		</div>
+		<div class="contact">
+				<p>	Мой контактный телефон</p>
+				<p>	+380501234567</p>
+				<p>	Мой профиль в Facebook</p>
+				<a href="https://www.facebook.com/profile.php?id=100012543996558">Vita Alpha</a>
+		</div>
+		<div class="feedback">
+				<p>Мой фидбек</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+		</div>
 	</div>
 
 </body>
