--- a/HTML_Modul_1/DZ1.html
+++ b/HTML_Modul_1/DZ1.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="feedback">
 				<p>Мой фидбек</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+				<p>Lorem ipsuttm dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 		</div>
 	</div>
 
