--- a/HTML_Modul_3_Bonus/DZ3_Bonus.html
+++ b/HTML_Modul_3_Bonus/DZ3_Bonus.html
@@ -7,6 +7,65 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div class="wraper">
+		<header>
+			<img src="img/google_head.jpg">
+			<div class="logo">
+				<img src="img/logo.png">
+				<img src="img/pajm_treee.png">
+				<h2>Путешествия по Азии</h2>
+				<div class="contact">
+					<p>Contact US</p>
+					<p>+12 34 567 890</p>
+					<p>info@asia-holidays.com</p>
+				</div>
+			</div>
+		</header>
+		<div class="gallery">
+			<div class="photo_item">
+				<figure>
+					<img src="img/india.jpg">
+					<figcaption>India</figcaption>
+				</figure>
+			</div>
+			<div class="photo_item">
+				<figure>
+					<img src="img/nepal.jpg">
+					<figcaption>Nepal</figcaption>
+				</figure>
+			</div>
+			<div class="photo_item">
+				<figure>
+					<img src="img/tibet.jpg">
+					<figcaption>Tibet</figcaption>
+				</figure>
+			</div>
+			<div class="photo_item">
+				<figure>
+					<img src="img/bhutan.jpg">
+					<figcaption>Bhutan</figcaption>
+				</figure>
+			</div>
+			<div class="photo_item">
+				<figure>
+					<img src="img/sri_lanka.jpg">
+					<figcaption>Sri Lanka</figcaption>
+				</figure>
+			</div>
+			<div class="photo_item">
+				<figure>
+					<img src="img/maldives.jpg">
+					<figcaption>Maldives</figcaption>
+				</figure>
+		</div>
+		<div class="clearfix"></div>
+		<footer>
+			<p>Copyright &copy;asia-holidays.com. 2010</p>
+		</footer>
+
+
+
+	</div>
 
 </body>
 </html>
